apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__slack__tests__adapters_slack_uem_to_egress.snap
---
source: apps/webhook_router/src/adapters/slack.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  text: "*bold*"
content_type: application/json
